--- a/templates/view_quiz.html
+++ b/templates/view_quiz.html
@@ -23,13 +23,8 @@
                             <a href="{{ url_for('edit_quiz', quiz_id=quiz.id) }}" class="btn btn-outline-primary">
                                 <i class="bi bi-pencil-square me-2"></i>Edit Quiz
                             </a>
-                            <a href="{{ url_for('dashboard') }}" class="btn btn-outline-secondary">
+                            <a href="{{ url_for('admin_dashboard') }}" class="btn btn-outline-secondary">
                                 <i class="bi bi-arrow-left me-2"></i>Back
-                            </a>
-                        </div>
-                        <div class="mb-3">
-                            <a href="#" class="btn btn-success">
-                                <i class="bi bi-play-circle me-2"></i>Take Quiz
                             </a>
                         </div>
                     </div>
